# local-funding-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: scheduler.yml  security-policy.yml
db/migrations/: 001_core_schema.sql
docs/: adgangsrestriktioner.md  datamodel-og-mappestruktur.md  drag-drop-ingestion-agent.md  ekstern-adgangspolitik.md  ekstern-portal-flow.md  eksterne-handlinger-og-pengepolitik.md  mac-control-app-og-api-budget.md  matchmaking-scoring-framework.md  production-parity.md  testmiljoe.md  validation-loops.md
docs/requirements/: software-requirements.md
funding-assistant-test/cases/company-01/: index_manifest.yml
funding-assistant-test/cases/company-02/: index_manifest.yml
funding-assistant-test/cases/company-03/: index_manifest.yml
funding-assistant-test/cases/company-04/: index_manifest.yml
funding-assistant-test/cases/company-05/: index_manifest.yml
funding-assistant-test/cases/company-06/: index_manifest.yml
funding-assistant-test/cases/company-07/: index_manifest.yml
funding-assistant-test/cases/company-08/: index_manifest.yml
funding-assistant/cases/company-01/: index_manifest.yml
funding-assistant/cases/company-02/: index_manifest.yml
funding-assistant/cases/company-03/: index_manifest.yml
funding-assistant/cases/company-04/: index_manifest.yml
scripts/: restart.sh  run-test-app.sh  start.sh  stop-test-app.sh  stop.sh  test-ingest.sh
src/funding_assistant/: __init__.py  policy.py  test_app.py  test_ingestion.py
tests/: test_policy.py
(+4 files in other folders)
