[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "local-funding-assistant"
version = "0.1.0"
description = "Local funding assistant foundations."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
